<resources>
    <string name="app_name">AndroidHomework1</string>
    <string name="inputid">Input ID:</string>
    <string name="inputpwd">Input Pwd:</string>
    <string name="submit">Submit</string>
    <string name="cal">Show Calendar</string>
    <string name="gen">Select Gender:</string>
    <string name="m">Male</string>
    <string name="fm">Female</string>
    <string name="zju">Zhejiang University</string>
    <string name="date">Select Birthday:</string>
    <string name="grade">Select Grade:</string>
    <string name="grade1">Grade 1</string>
    <string name="grade2">Grade 2</string>
    <string name="grade3">Grade 3</string>
    <string name="grade4">Grade 4</string>
    <string name="course">Select Courses:</string>
</resources>
